<resources>
    <string name="app_name">WorkOut</string>
    <string-array name="select">

        <item>Select The Type</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advance</item>

    </string-array>
    <string name="frontsquat">

        Set a barbell on a power rack at about shoulder height. Grab the power with an overhand grip at shoulder width and raise your elbows
        until your upper arms are parallel to the floor. Take the bar out of the rack and let it rest on your fingertips.
        Your elbows should be all the way up throughout the movement. Step back and set your feet at shoulder width with toes turned out slightly.
        Squat as low as you can without losing the arch in your lower back.
    </string>
    <string name="bulguriansplitsquat">
        Stand lunge-length in front of a bench. Hold a dumbbell in each hand and rest the top of your left foot on the bench behind you. Lower your body until your rear knee nearly touches the floor
        and your front thigh is parallel to the floor. Single-leg training can yield serious strength gains.
    </string>
    <string name="romaniandeadlift">
        A killer deadlift variation, hold a barbell with a shoulder-width grip and stand with feet hip-width apart. Bend your hips back as far as you can. Allow your knees to bend as needed while
        you lower the bar along your shins until you feel a stretch in your hamstrings. Keep your lower back in its natural arched position throughout
    </string>
    <string name="squad">
        In a squat rack or cage, grasp the bar as far apart as is comfortable and step under it. Place it on your lower traps, squeeze your shoulder blades together, push your elbows up and nudge the bar out of the rack. Take a step or two back and stand with your feet at shoulder width and your toes turned slightly out. Take a deep breath and bend your hips back, then bend your knees to lower your body as far as you can without losing the arch in your lower back. Push your knees out as you descend. Drive vertically with your hips to come back up, continuing to push your knees out.
    </string>
    <string name="dumbbellsetup">
        Stand behind a bench or another elevated surface that will put your thigh at parallel to the floor when you step your foot onto it. Hold a dumbbell in each hand and step onto the bench, but leave your trailing leg hanging off.
    </string>
    <string name="deadliftleg">
        Stand straight up with feet hip-width apart and shins one inch away from the bar. Grip the bar with a double pronated or reverse grip, bend knees and push them into your straight arms. Bring your chest up as much as possible and look straight ahead. Keeping your back flat, extend your hips to stand up, pulling the bar up along your legs to lockout. Here are 4 ways to break your deadlift record.
    </string>
    <string name="bodyweightcalfraise">
        Stand with your toes on the block and hold onto something sturdy for support. Raise your heels to come up on the balls of your feet, and then lower your heels until you feel a stretch in your calves. This is just one way to get stronger, bigger calves.
    </string>
    <string name="walkinglunge">
        Stand with your feet hip width, holding a dumbbell in each hand. Step forward with one leg and lower your body until your rear knee nearly touches the floor and your front thigh is parallel to the floor. Step forward with your rear leg to perform the next rep.
    </string>
    <string name="pausesquat">
        Set up in a squat rack or cage. Grasp the bar as far apart as is comfortable and step under it. Squeeze your shoulder blades together and nudge the bar out of the rack. Step back and stand with your feet at shoulder width and your toes turned out slightly. Take a deep breath and tuck your hips back, then bend your knees to lower your body as far as you can without losing the arch in your lower back. Push your knees out as you descend. Hold the bottom position for two seconds.
    </string>
    <string name="reverselunge">
        Stand with the dumbbells still in your hands and step back with your right foot. Lower your body until your front thigh is parallel to the floor and your rear knee nearly touches the floor. Keep your torso upright. Step forward to return to the starting position. Complete all reps on one leg, then switch legs. That’s one set.
    </string>
    <string name="dumbellsquat">
        Hold the weights at shoulder level and stand with feet shoulder-width apart and toes turned slightly out. Squat down as low as you can without losing the arch in your lower back.
    </string>
    <string name="kettlebellswing">
        Stand with feet hip-width apart and the kettlebell on the floor. Grasp the weight with both hands (palms facing you) and, keeping your lower back flat, extend your hips to raise it off the floor. From there, take a deep breath and bend your hips back, allowing the weight to swing back between your legs. Explosively extend your hips and exhale—allowing the momentum to swing the weight up to shoulder level. Control the descent, but use the momentum to begin the next rep.
    </string>
    <string name="bandlateralraise">
        Step on the free end of each band with the opposite foot so the bands form an X in front of your body. Raise your arms 90 degrees out to the sides until your upper arms are parallel to the floor.
    </string>
    <string name="snatchgriphighpull">
        Set up as you did for the clean and press, but grasp the bar with hands double shoulder width. Explode the bar upward until it’s at chest level and your upper arms are parallel to the floor. Try to push your chest out as you lift the bar and contract your upper back completely.
    </string>
    <string name="cleanandpress">
        Stand with feet shoulder width. Keeping your lower back arched, bend your hips back to lower your torso and grasp the bar with hands shoulder width. Extend your hips to lift the bar off the floor. When it gets past your knees, jump and shrug the bar so that momentum raises it and you catch it at shoulder level. Brace your abs and stand tall. Press the bar straight overhead.
    </string>
    <string name="trapraise">
        Set a bench to a low incline and lie chest-down with a dumbbell in each hand and your palms facing. Retract your shoulder blades, then raise the weights straight out so your arms are parallel to the floor.
    </string>
    <string name="seateddumbellclean">
        Hold a dumbbell in each hand and sit on the edge of a bench. Keeping your lower back flat, lean forward. Explosively straighten your body and shrug the weights so your arms rise. Allow the momentum to flip your wrists so you catch the weights at shoulder level.
    </string>
    <string name="highpull">
        Grasp the bar with hands about double shoulder width and hold it in front of your thighs. Bend your knees and hips so the bar hangs just above your knees. Explosively extend your hips as if jumping and pull the bar up to shoulder level with elbows wide apart, as in an upright row.
    </string>
    <string name="facepull">
        Attach a rope handle to the top pulley of a cable station. Grasp an end in each hand with palms facing each other. Step back to place tension on the cable. Pull the handles to your forehead so your palms face your ears and your upper back is fully contracted.
    </string>
    <string name="standingdubbellfly">
        Hold a dumbbell in each hand by your sides. Without shrugging, use your upper body to swing the weights up a few inches. Your arms and torso will form an upside down V shape. Think of it as a lateral raise with momentum but without full range of motion.
    </string>
    <string name="barbelloverheadpress">
        Set the bar up in a squat rack or cage, and grasp it just outside shoulder width. Take the bar off the rack and hold it at shoulder level with your forearms perpendicular to the floor. Squeeze the bar and brace your abs. Press the bar overhead, pushing your head forward and shrugging your traps as the bar passes your face.
    </string>
    <string name="pullover">
            PULLOVER\n
        Lie on your back on the floor and hold one dumbbell overhead with both hands. Press the weight over your chest, then reach back over your head, bending your elbows only slightly. Continue until you feel a stretch in your lats, then pull the dumbbell back over your chest. Take a deep breath every time you lower the dumbbell behind you.
    </string>
    <string name="proneflye">
        PRONE FLYE\n
        Hold a dumbbell in each hand and get into pushup position on the floor with palms facing each other. Spread your arms apart as in a normal dumbbell flye and lower your body until you feel a stretch in your chest, then squeeze the dumbbells and bring your hands back to pushup position. Keep your abs and glutes braced and your back flat throughout. If you’re using plate-loaded dumbbells, you may be able to roll the weight plates on the floor during the flye. Otherwise, you can place a towel under each dumbbell to facilitate sliding. If this is too difficult, perform the exercise on your knees.
    </string>
    <string name="floorpress">
        FLOOR PRESS\n
        Lie on the floor with a dumbbell in each hand. Your palms should face each other and your triceps (but not your elbows) should rest on the floor. Explosively press the dumbbells up. Lower them until only your triceps touch the floor. Pause for a moment, then begin the next rep. Increase the weight gradually each set.
    </string>
    <string name="lowcablecross">
        LOW-CABLE CROSS\n
        Stand between two facing cable stations and attach a D-handle to the low pulleys on each. With a handle in each hand and elbows slightly bent, raise your arms from waist height to out in front of your chest, flexing your pecs as you bring them together.
    </string>
    <string name="dumbellflye">
        DUMBELL FLYE\nLie back on a flat bench with a dumbbell in each hand. Keep a slight bend in your elbows and spread your arms wide, lowering the weights until they’re even with your chest. Flex your pecs and lift the weights back to the starting position.
    </string>
    <string name="chestpressmachine">
        CHEST PRESS MACHINE\nLoad plates on both sides of a flat-press machine, and adjust the seat so that both of your feet are flat on the floor. Grasp the handles and press to a full lockout.
    </string>
    <string name="inclineddumbellpress">
        INCLINED DUMBELL PRESS\n
        Load plates on both sides of a flat-press machine, and adjust the seat so that both of your feet are flat on the floor. Grasp the handles and press to a full lockout.
    </string>
    <string name="cablecrposs">
        CABLE CROSS\n
        Load plates on both sides of a flat-press machine, and adjust the seat so that both of your feet are flat on the floor. Grasp the handles and press to a full lockout.
    </string>
    <string name="inclinedumbellflye">
        INCLINED DUMBELL FLYE\n
        Load plates on both sides of a flat-press machine, and adjust the seat so that both of your feet are flat on the floor. Grasp the handles and press to a full lockout.
    </string>
</resources>