<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="410dp"
            android:layout_height="410dp"
            android:background="@drawable/squat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ghew"
            android:text="@string/squad"
            android:layout_centerHorizontal="true"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            />

        <ImageView
            android:layout_width="410dp"
            android:layout_height="410dp"
            android:background="@drawable/dumbellsetup"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dumbbellsetup"
            android:textColor="@color/ghew"
            />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            />


        <ImageView
            android:layout_width="410dp"
            android:layout_height="410dp"
            android:background="@drawable/deadlift"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadliftleg"
            android:textColor="@color/ghew"
            />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            />
    </LinearLayout>
</ScrollView>
